--- a/examples/ethylene_columbus/input/mcdrtin.1
+++ b/examples/ethylene_columbus/input/mcdrtin.1
@@ -1,14 +1,14 @@
  1 / input the spin multiplicity 
- 32  / input the total number of electrons 
+ 16  / input the total number of electrons 
    1 / input the number of irreps 
  Y / input symmetry labels 
  a 
  1 / input the molecular symmetry 
- 1 1 1 2 1 3 1 4 1 5 1 6 1 7 1 8 1 9 1 10 1 11 1 12 1 13  / doubly occupied orbitals 
- 1 14 1 15 1 16 1 17  
+ 1 1 1 2 1 3 1 4 1 5 1 6 1 7  / doubly occupied orbitals 
+ 1 8 1 9 1 10  
   / active orbitals 
- 0 0 0 6  / occmin 
- 6 6 6 6  / occmax 
+ 0 0 2  / occmin 
+ 2 2 2  / occmax 
   / bmin 
   /bmax 
  / step masks 
