--- a/examples/ethylene_columbus/input/mcdrtin.1
+++ b/examples/ethylene_columbus/input/mcdrtin.1
@@ -5,10 +5,10 @@
  a 
  1 / input the molecular symmetry 
  1 1 1 2 1 3 1 4 1 5 1 6 1 7  / doubly occupied orbitals 
- 1 8 1 9 1 10  
+ 1 8 1 9  
   / active orbitals 
- 0 0 2  / occmin 
- 2 2 2  / occmax 
+ 0 2  / occmin 
+ 2 2  / occmax 
   / bmin 
   /bmax 
  / step masks 
